# sdr-config

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  chirp.csv  cmake_install.cmake  config.xml  main.cpp  plots.ipynb  pulse.csv  pulsed.csv  rt.py  rx_test_metadata.txt  sdr-config  simulation.ipynb  sweep.csv  sweep_pulse.csv  sweep_sim.csv  sweep_upmixed_5.csv  upmixed_sweep.csv
configs/: config.xml  dylan_config.json
envs/: BSeriesTestCapture.env  BSeriesTestCaptureUpsampled.env  imgcapsback.env  transmittedWfm.env
include/: MTimer.h  cli.hpp  config.hpp  doxymain.hpp  hardware.hpp  parser.hpp  tests.hpp  utils.hpp  wavetable.hpp  wfm.h
include/processing/: DSP.hpp  SFCW.hpp
matlab/: animation.m  builtin_matlab_ex.m  new_rd.m  range_calc.m  range_doppler.m  rec_pulse.m  rec_pulse_range_anim.m  sim_target.m  simple_mixing_ex.m  sweep.csv  usrp_test.asv  usrp_test.m
matlab/outputs/: loopback_from_file_test_rx_metadata.txt  pulsed_test_rx_metadata.txt  tx_metadata.txt
outputs/: latency_test_metadata.txt  latency_test_rx_metadata.txt  loopback_from_file_test_metadata.txt  loopback_from_file_test_rx_metadata.txt  loopback_test_metadata.txt  loopback_test_rx_metadata.txt  pulsed_test_rx_metadata.txt  rx_test_rx_metadata.txt  tx_metadata.txt
outputs/outputs3/: 100M.csv  25M.csv  50M.csv  5M.csv  75M.csv  CELL.csv  POLA.csv
outputs/outputs5/: 100.csv  25.csv  50.csv  75.csv
outputs/outputs6/: TX.csv
outputs0/: pulsed_test_rx_metadata.txt
python/: crosstalk.py  funcs.py  plots.ipynb  report_plots.ipynb  rt.py  rt1.py  rt2.py  simulation.ipynb  sweep_doppler.csv  tests.ipynb
scripts/: import_boost_libaries.sh
sdr-config-package/DEBIAN/: control  postinst
sdr-config-package/usr/local/lib/: libboost_atomic.so.1.74.0  libboost_container.so.1.74.0  (+29 more)
src/: MTimer.cpp  config.cpp  main.cpp  parser.cpp  wfm.cpp
src/hardware/: RX_config.cpp  RX_funcs.cpp  TXRX_config.cpp  TXRX_funcs.cpp  TX_Funcs.cpp  TX_config.cpp
src/tests/: RX_tests.cpp  SFCW_tests.cpp  TEST_TYPES.cpp  TX_tests.cpp  loopback.cpp  misc.cpp  pulsed.cpp  pulsed_pipeline.cpp  tests.cpp
src/utilities/: config.cpp  utils.cpp
